--- a/hw/riscv/Kconfig
+++ b/hw/riscv/Kconfig
@@ -56,6 +56,8 @@ config SIFIVE_U
     select SIFIVE_U_OTP
     select SIFIVE_U_PRCI
     select UNIMP
+    select SIFIVE_SPI
+    select SSI_SD
 
 config SPIKE
     bool
